[project]
name = "computational-linear-algebra-lora"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitoria Mesquita Leite",email = "voymesquita@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "torch (>=2.12.0,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "torchvision (>=0.27.0,<0.28.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "transformers (>=5.11.0,<6.0.0)",
    "dataset (>=2.0.0,<3.0.0)",
    "datasets (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
