[project]
name = "computational-linear-algebra-lora"
version = "0.1.0"
description = "Experimentos de pesquisa para comparar full fine-tuning, LoRA e AdaLoRA em GPT-2 com analise algébrica dos updates."
authors = [
    {name = "Vitoria Mesquita Leite",email = "voymesquita@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "torch (>=2.12.0,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "transformers (>=5.11.0,<6.0.0)",
    "datasets (>=5.0.0,<6.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [
    { include = "model", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
